--- a/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Correct_amount_should_be_charged/_10_non_commercial_supporter_.yml
+++ b/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Correct_amount_should_be_charged/_10_non_commercial_supporter_.yml
@@ -5,26 +5,26 @@ http_interactions:
     uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: card[exp_month]=12&card[exp_year]=2<XPC_SERVICE_NAME>16&card[number]=4242424242424242&card[cvc]=123&plan=supporter&description=FooBar%2<XPC_SERVICE_NAME>Inc%2<XPC_SERVICE_NAME>supporter%2<XPC_SERVICE_NAME>membership%2<XPC_SERVICE_NAME>(SA9794PK)
+      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=supporter&description=FooBar%20Inc%20supporter%20membership%20(SA9794PK)
     headers:
       Accept:
-      - ! '*/*; q=<XPC_SERVICE_NAME>.5, application/xml'
+      - ! '*/*; q=0.5, application/xml'
       Accept-Encoding:
       - gzip, deflate
       User-Agent:
-      - Stripe/v1 RubyBindings/1.16.<XPC_SERVICE_NAME>
+      - Stripe/v1 RubyBindings/1.16.0
       Authorization:
-      - Bearer sk_test_39F7AAZeF7Kij<XPC_SERVICE_NAME>yrNOlDznbH
+      - Bearer sk_test_39F7AAZeF7Kij0yrNOlDznbH
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - ! '{"bindings_version":"1.16.<XPC_SERVICE_NAME>","lang":"ruby","lang_version":"1.9.3
-        p547 (2<XPC_SERVICE_NAME>14-<XPC_SERVICE_NAME>5-14)","platform":"x86_64-darwin14.<XPC_SERVICE_NAME>.<XPC_SERVICE_NAME>","publisher":"stripe","uname":"Darwin
-        Stuarts-MBP-3.home 14.<XPC_SERVICE_NAME>.<XPC_SERVICE_NAME> Darwin Kernel
-        Version 14.<XPC_SERVICE_NAME>.<XPC_SERVICE_NAME>: Fri Sep 19 <XPC_SERVICE_NAME><XPC_SERVICE_NAME>:26:44
-        PDT 2<XPC_SERVICE_NAME>14; root:xnu-2782.1.97~2/RELEASE_X86_64 x86_64"}'
+      - ! '{"bindings_version":"1.16.0","lang":"ruby","lang_version":"1.9.3
+        p547 (2014-05-14)","platform":"x86_64-darwin14.0.0","publisher":"stripe","uname":"Darwin
+        Stuarts-MBP-3.home 14.0.0 Darwin Kernel
+        Version 14.0.0: Fri Sep 19 00:26:44
+        PDT 2014; root:xnu-2782.1.97~2/RELEASE_X86_64 x86_64"}'
       Content-Length:
-      - 16<XPC_SERVICE_NAME>
+      - 160
   response:
     status:
       code: 400
@@ -33,11 +33,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, <XPC_SERVICE_NAME>7 Jan 2<XPC_SERVICE_NAME>15 13:23:25 GMT
+      - Wed, 07 Jan 2015 13:23:25 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - 12<XPC_SERVICE_NAME>
+      - 120
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -45,13 +45,13 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET, POST, HEAD, OPTIONS, DELETE
       Access-Control-Max-Age:
-      - 3<XPC_SERVICE_NAME><XPC_SERVICE_NAME>
+      - 300
       Cache-Control:
       - no-cache, no-store
       Request-Id:
       - req_ZGPblHBAOHmgOBy2
       Stripe-Version:
-      - 2<XPC_SERVICE_NAME>14-<XPC_SERVICE_NAME>5-19
+      - 2014-05-19
     body:
       encoding: US-ASCII
       string: ! "{\n  \"error\": {\n    \"type\": \"invalid_request_error\",\n    \"message\":
