--- a/env.example
+++ b/env.example
@@ -17,3 +17,6 @@ GOOGLE_ANALYTICS_TRACKER='UA-xxxxxx-x'
 AIRBRAKE_DIRECTORY_KEY=''
 
 STRIPE_API_KEY='<STRIPE_API_KEY>'
+
+CHARGIFY_API_KEY=''
+CHARGIFY_SUBDOMAIN=''
