--- a/env.example
+++ b/env.example
@@ -21,3 +21,7 @@ STRIPE_API_KEY='<STRIPE_API_KEY>'
 CHARGIFY_API_KEY=''
 CHARGIFY_SUBDOMAIN=''
 CHARGIFY_SITE_KEY=''
+
+GOOGLE_CLIENT_ID=''
+GOOGLE_CLIENT_SECRET=''
+
