--- a/.travis.yml
+++ b/.travis.yml
@@ -42,4 +42,5 @@ env:
   - FOUNDING_PARTNER_ID=NU4997LN
   - XPC_SERVICE_NAME=0
   - TEST_COVERAGE=1
+  - RACKSPACE_API_REGION=lon
   - secure: AU7M7tWv2LOj/CHO/cr0l92+GxK1IQ/1u8cPIIl4huP7VbPw+8KUg0BiB6RT0FZ2+Himd1DyfGFwlTGUXlskCHnW3uNXBOYz++kmGkRwvNJaxxgQ114KyD2NkAfNSH2h9hWgMtE73rUcbXQJXw9pPuxKUOqe1opi0tSL4/e24f8=
