--- a/.travis.yml
+++ b/.travis.yml
@@ -43,4 +43,5 @@ env:
   - XPC_SERVICE_NAME=0
   - TEST_COVERAGE=1
   - RACKSPACE_API_REGION=lon
+  - CHARGIFY_COMPONENT_ID=1234
   - secure: AU7M7tWv2LOj/CHO/cr0l92+GxK1IQ/1u8cPIIl4huP7VbPw+8KUg0BiB6RT0FZ2+Himd1DyfGFwlTGUXlskCHnW3uNXBOYz++kmGkRwvNJaxxgQ114KyD2NkAfNSH2h9hWgMtE73rUcbXQJXw9pPuxKUOqe1opi0tSL4/e24f8=
