--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ env:
   - CHARGIFY_COMPONENT_ID=1234
   - secure: AU7M7tWv2LOj/CHO/cr0l92+GxK1IQ/1u8cPIIl4huP7VbPw+8KUg0BiB6RT0FZ2+Himd1DyfGFwlTGUXlskCHnW3uNXBOYz++kmGkRwvNJaxxgQ114KyD2NkAfNSH2h9hWgMtE73rUcbXQJXw9pPuxKUOqe1opi0tSL4/e24f8=
   - CHARGIFY_PRODUCT_URL=https://theodi-testing.chargify.com/subscribe/%s/%s
-  - CHARGIFY_PAGE_IDS=individual_supporter,mjfzzwgm|individual_supporter_student_free,bdbytczwymyc|individual_supporter_student,rvx5rnhsx9pt|corporate_supporter_annual,j2rjxnps|supporter_monthly,gmb6y2cm|supporter_annual,35jqgq8q
+  - CHARGIFY_PAGE_IDS='individual_supporter,mjfzzwgm|individual_supporter_student_free,bdbytczwymyc|individual_supporter_student,rvx5rnhsx9pt|corporate_supporter_annual,j2rjxnps|supporter_monthly,gmb6y2cm|supporter_annual,35jqgq8q'
   - CHARGIFY_SUBDOMAIN=theodi-testing
   - secure: io/xuObALiz1tPInEo0pKc+Dn5mvwiJHS/5bn1TYOeMsjekvHkcQG3hTGiJtylzaNinXWz3dxxS0yoEJcRXE3NLdCdLZgL6waH93x9HxF2A1YDix0Oyahli1gFPtPPhVRoA6VnQ3gux7JR5vGJZ18y4M4H9ZYEQQAj05yYJglyo=
   - secure: dc5SIVEFQIb7vCG86CYR3xNTAlesZCW8GS7F/eY7UMGhFwpq+jurmKYxDVzttg+u1AmiyAU1QmAwXl++rOPFHh8JfTZqjagv5LznEc1SUqCfpBjheOtVA66drp0D4yY7Djv1VAUYFKwyN6t5Ur1gYek+gMJj3RK2PPC1DDX+7Bk=
