--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: ruby
 sudo: required
 dist: precise
 cache: bundler
+before_install:
+- gem install bundler
 rvm:
 - 1.9.3
 before_script: cp config/database.example.yml config/database.yml && bundle exec rake
